# TCProxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-actions-ci.yml  github-actions-demo.yml
client/: Cargo.toml  history.txt
client/src/: error.rs  io.rs  main.rs
client/src/command/: create.rs  delete.rs  exit.rs  list.rs  mod.rs  request.rs  set_program.rs  update.rs
docs/rules/: rules.md
log/: connections.log.2024-09-27
parser/: Cargo.toml
parser/src/: lib.rs
playground/: Cargo.toml
playground/src/: main.rs
redirector/: Cargo.toml
redirector/src/: main.rs  model.rs
redirector/src/redirector/: mod.rs
redirector/src/rpc/: mod.rs
redirector/src/sql/: mod.rs
rulefiles/: example.rf
rulelib/: Cargo.toml
rulelib/src/: grammar.pest  language.pest  lib.rs
rulelib/src/ast/: codegen.rs  mod.rs
rulelib/src/parser/: mod.rs
rulelib/src/tests/: mod.rs
rulelib/src/vm/: mod.rs
rules/: allow-all.rf  localhost.rf  reject-not-localhost.rf  rewrite_or_block.rf  source_port_filter.rf
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  model.rs  services.rs
src/: grammar.pest  main.rs
src/parser/: mod.rs
