[package]
name = "redirector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
anyhow = "1.0.89"
# Network
tokio = { version = "1.40.0", features = ["net", "tracing", "rt", "rt-multi-thread", "macros", "io-util"] }
tarpc = { version = "0.34.0", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
time = "0.3.36"

# DB
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }

# Services interface
shared = { path = "../shared" }
tokio-stream = {version = "0.1.16", features = ["net"]}
tokio-util = {version = "0.7.12", features = ["io"]}
